<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#87CEEB"
    android:padding="16dp">


    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/create_habit_title"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Spinner
        android:id="@+id/habitSpinner"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTextView" />

    <TextView
        android:id="@+id/selectDaysTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:text="@string/select_days_title"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/habitSpinner" />

    <LinearLayout
        android:id="@+id/daysContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/selectDaysTextView"
        android:layout_marginTop="8dp"
        android:gravity="center">

        <Button
            android:id="@+id/buttonMonday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/day_monday"
            android:textColor="#FFFFFF"
            android:backgroundTint="#007BFF"
            android:padding="8dp" />

        <Button
            android:id="@+id/buttonTuesday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/day_tuesday"
            android:textColor="#FFFFFF"
            android:backgroundTint="#007BFF"
            android:padding="8dp" />

        <Button
            android:id="@+id/buttonWednesday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/day_wednesday"
            android:textColor="#FFFFFF"
            android:backgroundTint="#007BFF"
            android:padding="8dp" />

        <Button
            android:id="@+id/buttonThursday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#007BFF"
            android:padding="8dp"
            android:text="@string/day_thursday"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/buttonFriday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/day_friday"
            android:textColor="#FFFFFF"
            android:backgroundTint="#007BFF"
            android:padding="8dp" />

        <Button
            android:id="@+id/buttonSaturday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/day_saturday"
            android:textColor="#FFFFFF"
            android:backgroundTint="#007BFF"
            android:padding="8dp" />

        <Button
            android:id="@+id/buttonSunday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/day_sunday"
            android:textColor="#FFFFFF"
            android:backgroundTint="#007BFF"
            android:padding="8dp" />
    </LinearLayout>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="213dp"
        android:layout_height="51dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="124dp"
        android:text="@string/save_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.652" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="36dp"
        android:text="@string/back_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/saveButton" />

</androidx.constraintlayout.widget.ConstraintLayout>
