<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#87CEEB"
    tools:context=".RecordsActivity">


    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/statistics_title"
        android:textSize="26sp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />


    <LinearLayout
        android:id="@+id/statisticsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <TextView
            android:id="@+id/currentStreakTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/current_streak"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:padding="16dp"
            android:background="#2E7D32"
            android:elevation="4dp" />

        <!-- Racha más larga -->
        <TextView
            android:id="@+id/longestStreakTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/longest_streak"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:padding="16dp"
            android:layout_marginTop="12dp"
            android:background="#2E7D32"
            android:elevation="4dp" />

        <TextView
            android:id="@+id/completionPercentageTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/completion_percentage"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:padding="16dp"
            android:layout_marginTop="12dp"
            android:background="#2E7D32"
            android:elevation="4dp" />
    </LinearLayout>


    <Button
        android:id="@+id/prevMonthButton"
        android:layout_width="55dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="#6200EE"
        android:elevation="4dp"
        android:text="@string/previous_month_symbol"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/statisticsContainer" />

    <TextView
        android:id="@+id/calendarTitleTextView"
        android:layout_width="0dp"
        android:layout_height="28dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text=""
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/nextMonthButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/prevMonthButton"
        app:layout_constraintTop_toBottomOf="@id/statisticsContainer" />


    <Button
        android:id="@+id/nextMonthButton"
        android:layout_width="55dp"
        android:layout_height="48dp"
        android:text="@string/next_month_symbol"
        android:backgroundTint="#6200EE"
        android:textColor="#FFFFFF"
        android:elevation="4dp"
        app:layout_constraintTop_toBottomOf="@id/statisticsContainer"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp" />


    <GridLayout
        android:id="@+id/calendarGrid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:columnCount="7"
        android:rowCount="6"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/calendarTitleTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <TextView
        android:id="@+id/motivationalPhraseTextView"
        android:layout_width="369dp"
        android:layout_height="169dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:padding="8dp"
        android:text=""
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@id/backButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calendarGrid"
        app:layout_constraintVertical_bias="0.909" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_button"
        android:onClick="onBackButtonPressed"
        android:textColor="#FFFFFF"
        android:backgroundTint="#6200EE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
